[package]
name = "celestium"
version = "0.1.0"
authors = ["Jens Hegner Stærmose <jhs@artificialmind.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
wasm-bindgen = "0.2.69"
rand = "0.6.5"
sha2 = "0.9.2"

[dependencies.secp256k1]
version = "0.19.0"
features = ["rand"]